traces/bug_46.txt
src/medit/tiles.c:108: error: DEAD_STORE
  The value written to &th (type int) is never used.
Showing all 1 steps of the trace


src/medit/tiles.c:108:3: Write of unused value
106.     nbrow  = (int)((float)imgHeight/ tileHeightNB) + 1;
107.     tiling = 1;  
108.     th = tileHeightNB;
         ^
109.     finhaut = sc->par.ys;
110.   
